[package]
name = "json_path_match"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
# json serializer
serde_json = "1.0"
jsonpath-rust = "=0.5.0"
jsonpath_lib = "0.3.0"
regex = "1.5.4"